style.css
/* ... */
.enhance-your-bottom-contactus-btn:hover{
    background-color: #4FC5F2;
}



/* RESPONSIVE */
@media (max-width: 992px) {
    .enhance-your-mid-container {
        flex-direction: column;
        text-align: center;
    }

    .enhance-your-mid-left,
    .enhance-your-mid-right,
    .enhance-your-mid-mid-image {
        width: 100%;
        text-align: center;
    }

    .enhance-your-mid-right-upper,
    .enhance-your-mid-right-bottom,
    .enhance-your-mid-left-upper,
    .enhance-your-mid-left-bottom {
        text-align: center;
    }
}




/* Explore our cutting edge laser Solutions */

/* ===== OUTER ===== */

.explore-our-cutting-outer-container {
    width: 100%;
    padding: 30px;
    background: #ffffff;
    text-align: center;

    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
    gap: 30px;
}


.explore-our-cutting-outer-container .explore-our-cutting-heading{

    width: 50%;

    display: flex;
    flex-direction: column;
    align-items: center;
    gap: 30px;
}

.explore-our-cutting-heading h2{
    font-family: "Sora", sans-serif;
    font-weight: 700;
    font-style: Bold;
    font-size: 48px;
    line-height: 56px;
    letter-spacing: 0px;

    color: #000000;
    text-align: center;
}

.explore-our-cutting-heading p{
    font-family: "Barlow",sans-serif;
    font-weight: 400;
    font-size: 20px;
    line-height: 150%;
    letter-spacing: 0.15px;

    color: #000000;
    text-align: center;
}

.explore-our-cutting-mid-items{
    display: grid;
    grid-template-columns: repeat(2,1fr);
    gap: 20px;
    
    /* max-width: 1890px; */
    max-width: 1858px;
    width: 100%;

}

.explore-our-cutting-mid-items .item-box{

    max-width: 919px;
    height: 690px; 
    position: relative;
}

.item-box .item-top-box{   /* adjusting all item-box k andar ka item-top-box together*/

    margin: auto;
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;

    max-width: 570px;
    width: 100%;

    position: absolute;
    top: 6%;
    left: 50%;
    transform: translateX(-50%);
}

/* Adjusting Each image of the grids One by One */
.item-1 .img-box{
    position: absolute;

    top: 34%;
    left: 50%;
    transform: translateX(-50%);
}

.item-2 .img-box{
    position: absolute;
    top: 37%;
    left: 50%;
    transform: translateX(-50%);
}

.item-3 .img-box{
    position: absolute;
    top: 47%;
    left: 50%;
    transform: translateX(-50%);
}

.item-4 .img-box{
    position: absolute;
    top: 37%;
    left: 50%;
    transform: translateX(-50%);
}
.item-5 .img-box{
    position: absolute;
    top: 43%;
    left: 50%;
    transform: translateX(-50%);
}
.item-6 .img-box{
    position: absolute;
    top: 40%;
    left: 50%;
    transform: translateX(-50%);
}


.explore-our-cutting-mid-items .item-box .item-top-box h2{
    font-family: "Sora",sans-serif;
    font-weight: 700;
    font-style: Bold;
    font-size: 40px;
    line-height: 56px;
    letter-spacing: 0px;
    text-align: center;
}

.explore-our-cutting-mid-items .item-box .item-top-box p{

    max-width: 411px;
    width: 100%;

    font-family: "Barlow",sans-serif;
    font-weight: 400;
    font-size: 20px;
    line-height: 150%;
    letter-spacing: 0.15px;

    color: #000000;
}

.item-box .item-top-box .item-learnmore-btn{
    cursor: pointer;
    position: relative;
    display: flex;
    flex-direction: row;
    justify-content: center;
    align-items: center;
    gap: 12px;

    padding: 18px 24px;
    margin: auto;
    width: 175px;
    height: 48px;
    border-radius: 8px;
    border: 1px solid black;

}

.item-box .item-top-box .item-learnmore-btn:hover{
    border: none;
    background-color: #4FC5F2;
}

.item-box .item-top-box .item-learnmore-btn:hover img{
    transform: rotate(44deg);
}

.item-box .item-top-box .item-learnmore-btn img{
    transition: transform 0.5s ease;
}

.item-box .item-top-box .item-learnmore-btn a{
    font-family: "Barlow",sans-serif;
    font-weight: 400;
    font-size: 20px;
    line-height: 16px;
    letter-spacing: 0px;
    text-decoration: none;

    color: #000000;
    text-align: center;
}



.item-box .item-top-box .item-learnmore-btn img{
    width: 12px;
    height: 12px;
    
}


.item-1 , .item-2, .item-3, .item-4, .item-5, .item-6{
    /* width: 49.5%; */

    border-radius: 32px;
}

/* Specific- Background color for every item-box */
.item-1{
    background-color: #E1F3FD;
}

.item-2{
    background-color: #E7F0F4;
}

.item-3{
    background-color: #E7F0F4;
}

.item-4{
    background-color: #E1F3FD;
}

.item-5{
    background-color: #E1F3FD;
}

.item-6{
    background-color: #E7F0F4;
}
/* Specific size for every image in the grid of explore-our-cutting-edge */
.explore-our-cutting-mid-items .item-1 .img-box img{
    width: 402px;
    height: 450.83px;
   
}
.explore-our-cutting-mid-items .item-2 .img-box img{
    width: 399px;
    height: 430.58px;
   
}
.explore-our-cutting-mid-items .item-3 .img-box img{
    width: 490px;
    height: 281.75px;
   
}
.explore-our-cutting-mid-items .item-4 .img-box img{
    width: 554px;
    height: 363.58px;
   
}
.explore-our-cutting-mid-items .item-5 .img-box img{
    width: 537px;
    height: 393.35px;
   
}
.explore-our-cutting-mid-items .item-6 .img-box img{
    width: 174px;
    height: 391.01px;
   
}









/* Discover how our Advanced Lasers */

/* ===== OUTER ===== */
.discover-how-outer-container {
    width: 100%;
    padding: 80px;
    background: #ffffff;
}

/* ===== TOP SECTION ===== */
.discover-how-top {
    display: flex;
    justify-content: space-between;
    gap: 40px;
    margin-bottom: 40px;
}

/* LEFT */
.discover-how-top-left {
    width: 50%;
}

.discover-how-top-left h2 {
    font-size: 48px;
    font-weight: 700;
    line-height: 56px;
    letter-spacing: 0px;
}

/* RIGHT */
.discover-how-top-right {
    width: 50%;
    display: flex;
    flex-direction: column;
    gap: 20px;
}
/* ... */

